[TID-3] Feedback changes